<resources>
    <string name="app_name">DataStore</string>
    <string name="input_something">input something</string>
    <string name="key">key</string>
    <string name="vaule">value</string>
    <string name="write_sp">write_sp</string>
    <string name="read_sp">read_sp</string>
    <string name="read_file">read_file</string>
    <string name="write_file">write_file</string>
    <string name="read_db">read_db</string>
    <string name="query_db">query_db</string>
    <string name="open_db">open_db</string>
    <string name="write_db">write_db</string>
    <string name="delete_db">delete_db</string>
    <string name="update_db">update_db</string>
    <string name="delete_lp">delete_lp</string>
    <string name="query_lp">query_lp</string>
    <string name="write_lp">write_lp</string>
    <string name="update_lp">update_lp</string>
</resources>
